# litvarpy

./: .travis.yml  LICENSE  README.md  __main__.py  litvar.py  pytest.ini  requirements.txt  setup.cfg  setup.py  test_core.py  test_litvar.py
.github/workflows/: publish-to-pypi.yml  python-package-pypi.yml  python-package.yml
litvar/: core.py  utils.py
src/litvar/: core.py  utils.py
tests/: test_core.py  test_utils.py
