[metadata]
name = litvarpy
version = 0.0.4
author = Sean DeLong
author_email = sean_delong@hotmail.ca
description = A Python interface for LitVar on NCBI
url = https://github.com/seanD111/litvarpy
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT",
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi

[options.packages.find]
where = src

